# ecole-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test.db
.github/workflows/: ci.yml
hypothesis/: __init__.py
src/: __init__.py
src/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py
src/app/adapters/publisher/: base.py  medium_stub.py  newsletter_stub.py  tpt_stub.py  x_stub.py
src/app/autodev/: scaffolder.py
src/app/autodev/specs/: design_spec.schema.json  feature_spec.schema.json
src/app/bandit/: thompson.py
src/app/dashboards/: server.py
src/app/llm/: mock.py  openai_provider.py  provider.py
src/app/math/: cso_math.py  invariance.py  pairing.py  router.py  schemas.py  teacher_math.py  templater.py
src/app/migrations/: env.py
src/app/playbook/: __init__.py  plays.yaml  rewards.yaml  teaching_constitution.yaml
src/app/roles/: analyst.py  ceo.py  cso.py  teacher.py  writer.py
src/app/seeds/: seed_attempts.py  seed_math.py  seed_plays.py
tests/: conftest.py  test_bandit.py  test_cso.py  test_end_to_end.py  test_math_end_to_end.py  test_math_invariance.py  test_math_pairing.py  test_teacher.py  test_teacher_cso_math.py
tests/api/: test_admin_export.py  test_concurrency_idempotency.py  test_session_flow.py
tests/math/: test_invariance_fuzz.py  test_pairing_fallback.py  test_pythagorean_properties.py  test_router_endpoints.py  test_teacher_cso_boundaries.py  test_templater_contracts.py
tests/migrations/: test_migrations_apply_rollback.py
(+16 files in other folders)
